rework cart | add favicon

--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Гастрофаст | Быстрая доставка еды на дом</title>
+  <meta name="description" content="Быстрая доставка еды на дом или в офис. Попробуйте в Гастрофаст.">
+  <meta property="og:title" content="Заказать еду в Гастрофаст">
+  <meta property="og:site_name" content="Гастрофаст">
+  <meta property="og:url" content="https://github.com/sonxvii/gastrofast">
+  <meta property="og:description" content="Быстрая доставка еды на дом или в офис. Попробуйте в Гастрофаст.">
 </head>
 
 <body>
-<!-- 
+  <!-- 
 
   built and developed by: sonxvii   (* ´ ｰ`)
   © 2025 
