--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="./public/favicon/favicon-96x96.png" sizes="96x96"/>
+  <link rel="icon" type="image/svg+xml" href="./public/favicon/favicon.svg">
+  <link rel="shortcut icon" href="./public/favicon/favicon.ico">
+  <link rel="apple-touch-icon" href="./public/favicon/apple-touch-icon.png" sizes="180x180"/>
+  <meta name="apple-mobile-web-app-title" content="Гастрофаст" />
+  <link rel="manifest" href="./public/favicon/site.webmanifest" />
   <title>Гастрофаст | Быстрая доставка еды на дом</title>
   <meta name="description" content="Быстрая доставка еды на дом или в офис. Попробуйте в Гастрофаст.">
   <meta property="og:title" content="Заказать еду в Гастрофаст">
